@@ -71,6 +71,7 @@ Revision 4.2.6rc0
 - Fix to licensing terms of multiple twisted backend modules to make
   the whole pysnmp package licensed under BSD 2-Clause license. This
   change has been explicitly permitted by the original modules authors.
+- Missing wrongLength and wrongEncoding SMI errors added.
 
 Revision 4.2.5
 --------------
